recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:7: error: not enough arguments for method treedroit: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
    treedroit();
             ^Tree:8: error: not enough arguments for method treegauche: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
    treegauche();
              ^