recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0){
    return
  }
  else{
    avance(length);
    treedroit();
    treegauche();
    recule(length);
  }
}

def treedroit(steps:Int, length:Double, angle:Double, shrink:Double){
  if (steps==0){
    return
  }
  else{
    droite(angle);
    return treedroit(steps-1,length,angle,shrink);
  }
}

def treegauche(steps:Int, length:Double, angle:Double, shrink:Double){
  if (steps==0){
    return
  }
  else{
    gauche(angle);
    return treedroit(steps-1,length,angle,shrink);
  }
}